finishing patrol and hearing percept; vision and hearing range may need tweaking cuz game is hard rn

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -30,3 +30,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/FPSTemplateTest")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/FPSTemplateTest")
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+CategorySlot0=Zero
+CategorySlot1=One
+CategorySlot2=Two
+CategorySlot3=Three
+CategorySlot4=Four
+CategorySlot5=Five
+
